<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_category"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sf_pro_display_light"
        android:textColor="@color/grey_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/sv_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_category_type1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_btn_5"
                android:drawablePadding="16dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/all"
                android:textColor="@color/grey_light"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_category_type2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_btn_5"
                android:drawableStart="@drawable/icon_2"
                android:drawablePadding="16dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/party"
                android:textColor="@color/grey_light"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_category_type3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_btn_5"
                android:drawableStart="@drawable/icon_1"
                android:drawablePadding="16dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/camping"
                android:textColor="@color/grey_light"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_category_type4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_btn_5"
                android:drawableStart="@drawable/icon_2"
                android:drawablePadding="16dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/rain"
                android:textColor="@color/grey_light"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_category_type5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_btn_5"
                android:drawableStart="@drawable/icon_1"
                android:drawablePadding="16dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/summer"
                android:textColor="@color/grey_light"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_category_type6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_btn_5"
                android:drawableStart="@drawable/icon_2"
                android:drawablePadding="16dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/winter"
                android:textColor="@color/grey_light"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_category_type7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_btn_5"
                android:drawableStart="@drawable/icon_1"
                android:drawablePadding="16dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/autumn"
                android:textColor="@color/grey_light"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_items"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_types"
        tools:listitem="@layout/item_store" />

</androidx.constraintlayout.widget.ConstraintLayout>